config file specifiable in option.

--- a/twitterbot.cabal
+++ b/twitterbot.cabal
@@ -29,4 +29,5 @@ executable twitterbot
         directory,
         filepath,
         rio,
-        random
+        random,
+        optparse-applicative,
